# AlgorithmsAnalysisExercises

./: README.md
DividirConquistar/: Hanoi.py  PolynomialMultiply_DAQ.py  Selection.py  Selection5.py  algorithms.py  pruebas.py  seq_01.txt  test_Selection.py
DividirConquistar/Sorting/code/: Makefile  c_Experiments.c  create_figs.gnuplot  python3_Experiments.py
Greedy/: OptBinTree.py  PermuTEst.py
Greedy/OptBinTree/: OptBinTree.py  a.out  opt_bin_tree.cxx
Greedy/SelectorTester/: ActivitySelector.py  selectorTester.py
Parcial/: Parcial.tex  Parcial1.py
Parcial2/: CoinGame.py  Parcial2-NicolasCamacho  Parcial2-NicolasCamacho.txt
ProgramaciónDinámica/: ArithmeticParentheses.py  CadenaMatricial.py  ClimbingStairs.py  CutRod.py  DistanciaEdicion.py  EstudioCR.py  EstudioF.py  FibonacciDP.py  HouseRobber.py  LCS.py  LCS_Leo.py  LIS.py  LSI.py  MatChain.py  MinimumCostForTickets.py  P2.py  ReducingDishes.py  Vueltas.py  ZZLS.py  matrix_mult.py  test_LCS.py  test_MatChain.py
RetoTrimonio/: CMakeLists.txt  Faster.c
Taller 1/: sorting_es.aux  sorting_es.lyx  sorting_es.tex
Taller 1/code/: c_Experiments  cxx_Experiments  cxx_Experiments.cxx  data.res  python3_Curves.py  seq_00.txt  seq_02.txt
Taller 2 /: Taller1-Dividir-y-vencer.tex  taller2.aux  taller2.tex
Taller 2 /code/: BuscarValor.py  PrefijosBono.py  SubSecuenciaHomogenea.py
Taller Programación Dinámica/: TallerDP - Nicolás Camacho Plazas.tex
Taller Programación Dinámica/code/: TallerDP.java  solLeo.py
Tractabilidad/NP/: BuscaMinas.py  CoverturaMinima.py  Dijkstra.py  HamiltonLoop.py  test.py
(+19 files in other folders)
